# debian-feed

./: .gitignore  debian-feed.example.json  debian-feed.py  debian-feed.service  debian-feed.timer  pyproject.toml  run.sh
